<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Fortuna</string>
    <string name="export_file" translatable="false">fortuna.vita</string>
    <string name="backup_file" translatable="false">fortuna_backup.vita</string>
    <string name="shared_prefs" translatable="false">settings.xml</string>

    <plurals name="day">
        <item quantity="one">%s day</item>
        <item quantity="other">%s days</item>
    </plurals>
    <plurals name="month">
        <item quantity="one">%s month</item>
        <item quantity="other">%s months</item>
    </plurals>
    <plurals name="year">
        <item quantity="one">%s year</item>
        <item quantity="other">%s years</item>
    </plurals>

    <!-- Panel -->
    <string name="year">Year</string>
    <string name="emojiHint" translatable="false">😃</string>
    <string name="notesHint" translatable="false">.....</string>
    <string name="defValue">DEFAULT</string>
    <string name="viewInCalendar">Calendar</string>
    <string name="holdLonger">Hold a little longer&#8230;</string>
    <string name="scoreFuture">You don\'t know your future!!!</string>

    <!-- Numerals -->
    <string name="numerals">Numerals</string>
    <string name="numArabic">Arabic</string>
    <string name="numRoman">Roman</string>
    <string name="numEtruscan">Etruscan</string>
    <string name="numAttic">Attic</string>
    <string name="numOldPersian">Old Persian</string>
    <string name="numBrahmi">Brahmi</string>
    <string name="numHieroglyph">Hieroglyph</string>

    <!-- Drawer -->
    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="navSearch">Search</string>
    <string name="searchInclusive">Inclusive Search</string>
    <string name="foundNothing">Nothing was found!</string>
    <string name="navStat">Statistics</string>
    <string name="fortunaStat">Fortuna Statistics</string>
    <string name="statText">Average of Total: %1$s\nSum: %2$s\nCovering %3$s.\n</string>
    <string name="navExport">Export data</string>
    <string name="emptyVita">Your vita is empty!</string>
    <string name="navImport">Import data</string>
    <string name="importOpenError">Unfortunately an error occurred while opening the file!</string>
    <string name="importReadError">Unfortunately an error occurred while reading the file!</string>
    <string name="askImport">Are you sure you want to replace all these records?</string>
    <string name="navSend">Send data to</string>
    <string name="navHelp">Help</string>
    <string name="help">
        This app is designed based on the \"Hedonist\" philosophy!
        It\'s used to calculate the amount of pleasure and pain one senses in their life.
        \n
        \nYou can enter the quality of your life in a scale between -3 to +3 for each day.
        \n
        \nAlternatively you can estimate the number of a whole month using the field right to the
        year field at the top of the page.
        \n
        \nThen you can see how much pleasure and pain you\'ve sensed overall in your life or in a
        particular month.
        \n
        \n>> How to work with it:
        \n* Hold your finger on a day to view that day in multiple calendar systems and inside the
        calendar application of your device.
        \n* Press the left and right arrows to navigate in month and press longer to jump to 6
        months earlier or later.
        \n* Press the up and down arrows near the \"year\" field to navigate in years and press
        longer to jump to 5 year later or earlier.
        \n* The \"Statistics\" section describes the status of your entire life, plus a table of
        tiny cells, each describing a month of your life;
        long click on the cells to see brief details, double click on them to jump to that month.
        It does not take values of the days in the future into the account. (only today and the past)
        \n
        \nNote: this app does not believe in weeks!!
    </string>

    <!-- Backup -->
    <string name="backupDesc">
        Your data is automatically backed up every night in a separate file in your own device
        and also another copy on the cloud (if you enable it).
    </string>
    <string name="backupStatus">Last time at %1$s\nFile size: %2$s</string>
    <string name="backupRestoreSure">
        Are you sure you want to replace the current data with the earlier backed-up one at %s ?
    </string>
    <string name="never">\"never\"</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="export">Export</string>
    <string-array name="bytes" translatable="false">
        <item>%d B</item>
        <item>%d KB</item>
        <item>%d MB</item>
        <item>%d GB</item>
        <item>%d TB</item>
    </string-array>
    <string name="dateSeparator">/</string>
    <string name="cloudOn">ON</string>
    <string name="cloudOff">OFF</string>
    <string name="logout">Logout</string>
    <string name="dropbox">Dropbox:&#160;</string>
    <string name="dropboxSuccess">Uploaded to Dropbox!</string>
    <string name="dropboxFailure">Couldn\'t upload to Dropbox!</string>
    <string name="dropboxLogoutSure">
        Are you sure you want to log out of your Dropbox account?
    </string>

    <!-- Dif -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="difAgo">%s ago</string>
    <string name="difLater">%s later</string>
    <string name="sameDay">Same day</string>
    <string name="difBefore">%s before that time</string>
    <string name="difAfter">%s after that time</string>
    <string name="difSep" translatable="false">,&#160;</string>

    <!-- Nyx -->
    <string name="ntfReminderTitle">Daily Reminder</string>
    <string name="ntfReminderDesc">
        Notifies you when you everyday to record your well-being status.
    </string>
    <string name="ntfReminder">How was your day?</string>

    <!-- TodayWidget -->
    <string name="widTodayDesc">Shows current date like a calendar app.</string>

    <!-- Dialogues -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="done">Done!</string>
    <string name="failed">Failed!</string>
    <string name="copied">Copied to clipboard.</string>
</resources>